# DxChess

./: CMakeLists.txt
inc/DxChess/: Bitboard.hpp  Compass.hpp  CompassMovement.hpp  Coord.hpp  Rays.hpp
src/: Bitboard.cpp  Bitboard.hpp  Coord.hpp  Piece.hpp  main.cpp
src/DxChess/: Bitboard.cpp  Coord.cpp
tests/: Bitboard.cpp  Coord.cpp
